fixed .callout contrast

--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -34,7 +34,7 @@ article p {
 }
 
 .callout {
-	color: #777;
+	color: #799;
 	background-color: #702963;
     padding: 10px;
 }
